Updating my personal Website

--- a/personal_website/index.html
+++ b/personal_website/index.html
@@ -5,32 +5,27 @@
             UID
         </title>
     </head>
-    <body>
-        <h1 style = "margin-top: 200px; margin-left: 400px; font-size: 50px;">
+    <body style = 'background-color: #e1e4f1'>
+        <nav style = "font-size: 20px; padding-left: 500px; " >
+            <ul style="list-style-type: none;">
+
+
+                <li style="display: inline; margin-left: 40px; margin-right: 20px;"><a href="#" style="color: black; text-decoration: none;"><span style="color: Red;">Home</span></a></li>
+                <li style="display: inline; margin-left: 50px; margin-right: 20px;"><a href="html/About.html" style="color: black; text-decoration: none;">About</a></li>
+               <li style="display: inline; margin-left: 50px; margin-right: 20px;"> <a href="#" style="color: black; text-decoration: none;">Resume</a></li>
+                <li style="display: inline; margin-left: 45px; margin-right: 20px;"><a href="html/Contact.html" style="color: black; text-decoration: none;">Contact</a></li>
+            
+
+            </ul>
+
+        </nav>
+        <p style="font-size: 15px; margin-top: 200px; margin-left: 370px;"> &lt Hello World &gt</p>
+        <h1 style = "margin-top: 15px; margin-left: 370px; font-size: 50px;">
             I'm <font color = "red">A.S DEEPAN</font>
         </h1>
-        <p>
-            <h2> About Me</h2>
-            <ol>
-                <li>
-                    I am extremely passioante about BlockChain and Cryptocurrencies 
-                </li>
-                <li> 
-                    Budding Blockchain Devoloper
-                </li>
-                <li>
-                    Web Security at Team BiOs Coimbatore
-                </li>
-
-
-            </ol>
-        </p>
-
-        <div style = "text-align: right; position: relative; top: -300px; left: -200px;"> <img src="./personalpicfinal.png" width="350" style = "vertical-align: top;"/></div>
-
-        <footer>
-            Follow me at <a href = "https://twitter.com/poyimone" target = "_blank">Twitter</a>
-    </footer>
-        </body>
+        <p style="font-size: 15     px; padding-left: 370px; margin-top: -20px;"> <span style="color: red; font-weight: bold;">Heyyy </span>I am mostly interested in <span style="color: red; font-weight: bold;">Web3 </span> and <span style="color: red; font-weight: bold;">Cybersecurity </span> and when <br> I am not tinkering with either of those two you can find me playing valorant</p>
+        <div style = "text-align: right; position: relative; top: -220px; left: -250px; "> <img src="images/personalpicfinal.png" width="350" style = "vertical-align: top;"/></div>
+        <div style="display: flex;"><img src="images/twitter.png " style="flex-direction: column; width: 50px; align-items: center;"></div>
+    </body>
    
 </html>
