--- a/Mini-Project/index.html
+++ b/Mini-Project/index.html
@@ -12,8 +12,8 @@
       <nav style="margin-left:200px">
               <ul class="navlink" >
                  <li class="li"><a class="a a1"href="./index.html">Home</a></li>
-                  <li class="li"><a class="a a1"href="./html/phone.html">Login</a></li>
-                  <li class="li"><a class="a a1" href="./html/email.html">FAQ</a></li>
+                  <li class="li"><a class="a a1"href="./html/login.html">Login</a></li>
+                  <li class="li"><a class="a a1" href="#email">FAQ</a></li>
               </ul>
           </nav>
           </div>
