--- a/Mini-Project/html/login.html
+++ b/Mini-Project/html/login.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>A-Faucet - Login</title>
         <meta name="viewport" contect="width=device-width,initial-scale=1">
-        <link style="border-radius: 50%" rel="icon" href="./imgs/icon.png">
+        <link style="border-radius: 50%" rel="icon" href="../imgs/icon.png">
             <style>
               body
               {
@@ -135,7 +135,7 @@ label {
 </style>
 <body>
   <div class="aligned">
-    <img src= imgs/icon.png width="50" alt="">
+    <img src= ../imgs/icon.png width="50" alt="">
          
     <span>Amrita Faucet</span>
 </div>
