--- a/Mini-Project/index.html
+++ b/Mini-Project/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <title>A-Faucet</title>
+        <link style="border-radius: 50%" rel="icon" href="./imgs/icon.png">
         <link rel="stylesheet" href="./css/index.css">
     </head>
     <header class="header" style="margin-left:-60px;">
