--- a/anokha/index.html
+++ b/anokha/index.html
@@ -264,6 +264,10 @@ With seven campuses at Amaravati, Amritapuri, Bengaluru, Chennai, Coimbatore, Ko
 
   <!-- Template Main Javascript File -->
   <script src="js/main.js"></script>
+  <!--Sending ethers-->
+
+
+
 </body>
 
 </html>
