--- a/Mini-Project/index.html
+++ b/Mini-Project/index.html
@@ -10,7 +10,7 @@
 
 
 <!--Function to send ether-->
-<script type="module">
+<script>
 window.addEventListener('load', async () => {
 
 		if (typeof window.ethereum !== 'undefined') { 
