--- a/Mini-Project/index.html
+++ b/Mini-Project/index.html
@@ -10,6 +10,7 @@
 
 
 <!--Function to send ether-->
+	      <script src="https://cdn.jsdelivr.net/npm/web3/dist/web3.js"></script>
 <script>
 window.addEventListener('load', async () => {
 
