--- a/Mini-Project/html/login.html
+++ b/Mini-Project/html/login.html
@@ -24,6 +24,13 @@
               </style>
     </head>
     <header>
+         <nav style="margin-left:200px">
+              <ul class="navlink" >
+                 <li class="li"><a class="a a1"href="../index.html">Home</a></li>
+                  <li class="li"><a class="a a1"href="./login.html">Login</a></li>
+                  <li class="li"><a class="a a1" href="#email">FAQ</a></li>
+              </ul>
+          </nav>
         <style> 
           @import url('https://fonts.googleapis.com/css?family=Montserrat:500');
         *{
