--- a/Mini-Project/html/login.html
+++ b/Mini-Project/html/login.html
@@ -6,6 +6,7 @@
         <title>A-Faucet - Login</title>
         <meta name="viewport" contect="width=device-width,initial-scale=1">
         <link style="border-radius: 50%" rel="icon" href="../imgs/icon.png">
+        <link rel="stylesheet" href="../css/index.css">
             <style>
               body
               {
