--- a/Mini-Project/html/login.html
+++ b/Mini-Project/html/login.html
@@ -239,7 +239,7 @@
 <!-- Body (content)starts from here -->
 
   <div class="aligned">
-    <img src= imgs/icon.png width="50" alt="">
+    <img src= ../imgs/icon.png width="50" alt="">
          
     <span>Amrita Faucet</span>
 </div>
