--- a/Mini-Project/html/login.html
+++ b/Mini-Project/html/login.html
@@ -97,7 +97,7 @@
         <figcaption style="margin-top: -35px;font-size:25px;color:white;margin-left:60px">A - FAUCET</figcaption>
       <nav style="margin-left:200px">
               <ul class="navlink" >
-                 <li class="li"><a class="a a1"href="../html/index.html">Home</a></li>
+                 <li class="li"><a class="a a1"href="../index.html">Home</a></li>
                   <li class="li"><a class="a a1"href="#">Login</a></li>
                   <li class="li"><a class="a a1" href="../html/email.html">FAQ</a></li>
               </ul>
