--- a/Mini-Project/index.html
+++ b/Mini-Project/index.html
@@ -64,7 +64,7 @@ window.addEventListener('load', async () => {
               <ul class="navlink" >
                  <li class="li"><a class="a a1"href="./index.html">Home</a></li>
                   <li class="li"><a class="a a1"href="./html/login.html">Login</a></li>
-                  <li class="li"><a class="a a1" href="#email">FAQ</a></li>
+<!--                   <li class="li"><a class="a a1" href="#email">FAQ</a></li> -->
               </ul>
           </nav>
           </div>
