--- a/Mini-Project/index.html
+++ b/Mini-Project/index.html
@@ -68,7 +68,7 @@ window.addEventListener('load', async () => {
               </ul>
           </nav>
           </div>
-          <a class="cta" href="" style="margin-top:10px"><button class="button">Contact</button></a>
+<!--           <a class="cta" href="" style="margin-top:10px"><button class="button">Contact</button></a> -->
         </div>
       </header>
     <body>
