--- a/Mini-Project/html/login.html
+++ b/Mini-Project/html/login.html
@@ -99,11 +99,11 @@
               <ul class="navlink" >
                  <li class="li"><a class="a a1"href="../index.html">Home</a></li>
                   <li class="li"><a class="a a1"href="#">Login</a></li>
-                  <li class="li"><a class="a a1" href="../html/email.html">FAQ</a></li>
+<!--                   <li class="li"><a class="a a1" href="../html/email.html">FAQ</a></li> -->
               </ul>
           </nav>
           </div>
-          <a class="cta" href="" style="margin-top:10px"><button class="button">Contact</button></a>
+<!--           <a class="cta" href="" style="margin-top:10px"><button class="button">Contact</button></a> -->
         </div>
       </header>
 
