--- a/Mini-Project/html/login.html
+++ b/Mini-Project/html/login.html
@@ -99,11 +99,11 @@
               <ul class="navlink" >
                  <li class="li"><a class="a a1"href="../index.html">Home</a></li>
                   <li class="li"><a class="a a1"href="#">Login</a></li>
-<!--                   <li class="li"><a class="a a1" href="../html/email.html">FAQ</a></li> -->
+                  <li class="li"><a class="a a1" href="../html/faq.html">FAQ</a></li>
               </ul>
           </nav>
           </div>
-<!--           <a class="cta" href="" style="margin-top:10px"><button class="button">Contact</button></a> -->
+          <a class="cta" href="./contact.html" style="margin-top:10px"><button class="button">Contact</button></a>
         </div>
       </header>
 
@@ -120,7 +120,7 @@
           font-family: "Montserrat",sans-serif;
           background-repeat: no-repeat;
           width:100%;
-          height: 100vh;
+          height: 100%;
           }
 
       *{
@@ -272,7 +272,7 @@ value="LOGIN" />
               </div>
             </div></center>
             <div class="copy">
-              <p>© 2022 A-Faucet Insights, Inc. • <a href="#" 
+              <p>© 2022 A-Faucet Insights, Inc. • <a href="./terms.html" target="_blank" 
 style="color: black;">Terms of Service</a></p>
               </div>
     </body>
