--- a/Mini-Project/index.html
+++ b/Mini-Project/index.html
@@ -51,7 +51,7 @@ Web3.providers.HttpProvider("https://ropsten.infura.io/v3/cbd9dc11b30147e9a2cc97
       function CallingSendEther(){
         var checkbox = document.getElementById("terms");
         if (!checkbox.checked) {
-              alert("Checkbox is not checked.");
+              alert("Please accept Terms and conditions");
         }
         else{
           sendEther();
