--- a/Mini-Project/html/terms.html
+++ b/Mini-Project/html/terms.html
@@ -11,8 +11,8 @@
     <div class="terms_and_conditions_container">
       <div class="wrapper">
         <div class="heading">
-          <h1 class="main-heading">Uniswap Labs Terms of Service</h1>
-          <h3>Last modified: November 30, 2022</h4>
+          <h1 class="main-heading">Amrita Faucet Terms and Condtitions</h1>
+          <h3>Last modified: February 7th, 2023</h4>
         </div>
         <div>
           <p>
