--- a/Mini-Project/html/faq.html
+++ b/Mini-Project/html/faq.html
@@ -194,7 +194,6 @@ class="button">Contact</button></a>
       </div>
     </body>
 
-    <center><footer style="margin-top:100px">
-      <p>Amrita Vishwa Vidhyapeetam <br>&copy; by Amrita Faucet</p>
-    </footer></center>
+              <center><p>© 2022 A-Faucet Insights, Inc. • <a href="./terms.html" target="_blank" 
+style="color: black;">Terms of Service</a></p><center>
 </html>
