--- a/Mini-Project/index.html
+++ b/Mini-Project/index.html
@@ -126,6 +126,7 @@ style="color:white;font-size:20px;margin-left:450px;margin-top:-45px">Time</p>
     </center>
     </body>
     <center><footer style="margin-top:150px">
-      <p>Amrita Vishwa Vidhyapeetam <br>&copy; by Amrita Faucet</p>
+                    <p>© 2022 A-Faucet Insights, Inc. • <a href="html/terms.html" target="_blank" 
+style="color: black;">Terms of Service</a></p>
     </footer></center>
 </html>
