--- a/Mini-Project/index.html
+++ b/Mini-Project/index.html
@@ -126,7 +126,13 @@ style="color:white;font-size:20px;margin-left:450px;margin-top:-45px">Time</p>
     </center>
     </body>
     <center><footer style="margin-top:150px">
-                    <p>© 2022 A-Faucet Insights, Inc. • <a href="html/terms.html" target="_blank" 
+                    <p>© 2022-2023. A-Faucet Insights, Inc. -Deepan , Vishnu , Vinoth • <a href="html/terms.html" target="_blank" 
 style="color: black;">Terms of Service</a></p>
+	    <br>
+	    <p>II B.Tech CSE(CYS) </p>\
+	    <br>
+	    <p>Part of 20CYS202 - User Interface Design </p>
+	    <p>Amrita Vishwa Vidyapeetham, Coimbatore </p>
+		  
     </footer></center>
 </html>
