--- a/Mini-Project/html/login.html
+++ b/Mini-Project/html/login.html
@@ -274,6 +274,9 @@ value="LOGIN" />
             <div class="copy">
               <p>© 2022 A-Faucet Insights, Inc. • <a href="./terms.html" target="_blank" 
 style="color: black;">Terms of Service</a></p>
+        <p>II B.Tech CSE(CYS) </p>
+	    <p>Part of 20CYS202 - User Interface Design </p>
+	    <p>Amrita Vishwa Vidyapeetham, Coimbatore </p>
               </div>
     </body>
 </html>
