--- a/Mini-Project/html/faq.html
+++ b/Mini-Project/html/faq.html
@@ -195,5 +195,9 @@ class="button">Contact</button></a>
     </body>
 
               <center><p>© 2022 A-Faucet Insights, Inc. • <a href="./terms.html" target="_blank" 
-style="color: black;">Terms of Service</a></p><center>
+style="color: black;">Terms of Service</a></p>
+        <p>II B.Tech CSE(CYS) </p>
+	    <p>Part of 20CYS202 - User Interface Design </p>
+	    <p>Amrita Vishwa Vidyapeetham, Coimbatore </p>
+                  <center>
 </html>
