--- a/Mini-Project/html/login.html
+++ b/Mini-Project/html/login.html
@@ -272,11 +272,14 @@ value="LOGIN" />
               </div>
             </div></center>
             <div class="copy">
-              <p>© 2022 A-Faucet Insights, Inc. • <a href="./terms.html" target="_blank" 
+<footer>
+       <center><p>© 2022 A-Faucet Insights, Inc. • <a href="./terms.html" target="_blank" 
 style="color: black;">Terms of Service</a></p>
         <p>II B.Tech CSE(CYS) </p>
 	    <p>Part of 20CYS202 - User Interface Design </p>
 	    <p>Amrita Vishwa Vidyapeetham, Coimbatore </p>
+	</center>
+	</footer>
               </div>
     </body>
 </html>
