--- a/Mini-Project/html/contact.html
+++ b/Mini-Project/html/contact.html
@@ -265,7 +265,12 @@
 
     </body>
     <!-- Footer -->
-    <center><footer style="margin-top:150px">
-        <p>Amrita Vishwa Vidhyapeetam <br>&copy; by Amrita Faucet</p>
-      </footer></center>
+    <center><footer>
+       <center><p>© 2022 A-Faucet Insights, Inc. • <a href="./terms.html" target="_blank" 
+style="color: black;">Terms of Service</a></p>
+        <p>II B.Tech CSE(CYS) </p>
+	    <p>Part of 20CYS202 - User Interface Design </p>
+	    <p>Amrita Vishwa Vidyapeetham, Coimbatore </p>
+	</center>
+	</footer>
 </html>
