--- a/Mini-Project/html/faq.html
+++ b/Mini-Project/html/faq.html
@@ -193,12 +193,15 @@ class="button">Contact</button></a>
         <h4>If you have any other issue's please feel free to <a href="./contact.html">Contact Us!</a></h4>
       </div>
     </body>
-<footer>
-       <center><p>© 2022 A-Faucet Insights, Inc. • <a href="./terms.html" target="_blank" 
+
+       <center><footer style="margin-top:150px">
+                    <p>© 2022-2023. A-Faucet Insights, Inc. -Deepan , Vishnu , Vinoth • <a href="html/terms.html" target="_blank" 
 style="color: black;">Terms of Service</a></p>
-        <p>II B.Tech CSE(CYS) </p>
+	    <p>II B.Tech CSE(CYS) </p>
 	    <p>Part of 20CYS202 - User Interface Design </p>
 	    <p>Amrita Vishwa Vidyapeetham, Coimbatore </p>
+		  
+    </footer>
 	</center>
-	</footer>
+
 </html>
