--- a/Mini-Project/index.html
+++ b/Mini-Project/index.html
@@ -107,7 +107,7 @@ Eth/day.</p></center>
 class="searchbar" id="EtherWallet" name="input">
                 <input type="checkbox" id = "terms">Do you agree with our <a href = "html/terms.html" target = "_blank"> Terms and Conditions</a>
                 <br> 
-                <input type = "button" onclick = "CallingSendEther()" value = "Send Ether">
+                <button class ="button" type = "button" onclick = "CallingSendEther()" value = "Send Ether" style="margin-top: 20px; margin-left: 20px;">Send Ether</button>
             </form>
         </div>
             <p style="color:white"><a href="./html/login.html" 
